完成内部 Pulsar 2.10.4 适配